[Build] Enable strict API analysis and baseline check
Stop running the build with multiple threads as concurrent executions
negatively impact the builds stability.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,8 @@ jobs:
         maven-version: 3.9.11
     - name: Build with Maven
       run: >-
-        mvn clean verify --threads 1C --update-snapshots
-        -P baseline-check
+        mvn clean verify --update-snapshots
+        -Pbaseline-check -Papi-check
 
     - name: Flatten P2 repository
       if: ${{ matrix.config.name == 'Linux' }}
