--- a/releng/org.eclipse.passage.parent/pom.xml
+++ b/releng/org.eclipse.passage.parent/pom.xml
@@ -486,7 +486,10 @@
 					<artifactId>tycho-p2-repository-plugin</artifactId>
 					<version>${tycho.version}</version>
 					<configuration>
+						<includeAllDependencies>true</includeAllDependencies>
 						<includeAllSources>true</includeAllSources>
+						<filterProvided>true</filterProvided>
+						<addIUTargetRepositoryReferences>true</addIUTargetRepositoryReferences>
 					</configuration>
 				</plugin>
 				<plugin>
