Rename RelEng projects to distinguish them from bundles and features
Also add the repository as project.

--- a/releng/org.eclipse.passage.target/.project
+++ b/releng/org.eclipse.passage.target/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.passage.target</name>
+	<name>eclipse.passage.target</name>
 	<comment></comment>
 	<projects>
 	</projects>
