--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.passage.fls.root</name>
+	<name>eclipse.passage.fls</name>
 	<comment></comment>
 	<projects>
 	</projects>
