--- a/releng/org.eclipse.passage.parent/.project
+++ b/releng/org.eclipse.passage.parent/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.passage.parent</name>
+	<name>eclipse.passage.parent</name>
 	<comment></comment>
 	<projects>
 	</projects>
