--- a/releng/org.eclipse.passage.parent/pom.xml
+++ b/releng/org.eclipse.passage.parent/pom.xml
@@ -57,80 +57,6 @@
 		</profile>
 
 		<profile>
-			<id>api-generation</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.cbi.maven.plugins</groupId>
-						<artifactId>eclipse-cbi-plugin</artifactId>
-						<version>${cbi-plugins.version}</version>
-						<executions>
-							<execution>
-								<!-- Default lifecycle phase: 'GENERATE_SOURCES' See https://maven.apache.org/ref/3.5.4/maven-core/lifecycles.html -->
-								<goals>
-									<goal>generate-api-build-xml</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-eclipserun-plugin</artifactId>
-						<executions>
-							<execution>
-								<goals>
-									<goal>eclipse-run</goal>
-								</goals>
-								<phase>compile</phase>
-								<configuration>
-									<!-- actual indexer call -->
-									<appArgLine>-data target/apibuild-workspace -application org.eclipse.ant.core.antRunner -buildfile target/.apibuild.xml</appArgLine>
-									<dependencies>
-										<!-- list of bundles that we need -->
-										<dependency>
-											<artifactId>org.eclipse.ant.core</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>org.apache.ant</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>org.eclipse.pde.api.tools</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>org.eclipse.pde.build</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>org.eclipse.pde.core</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>org.eclipse.equinox.launcher</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>org.eclipse.osgi.compatibility.state</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-										<dependency>
-											<artifactId>javax.annotation</artifactId>
-											<type>eclipse-plugin</type>
-										</dependency>
-									</dependencies>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
 			<id>api-check</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
@@ -312,6 +238,22 @@
 						<goals>
 							<goal>plugin-source</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-apitools-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<executions>
+					<execution>
+						<id>generate-api-description</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<projectName>${project.artifactId}_${qualifiedVersion}</projectName>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
