--- a/releng/org.eclipse.passage.fls.repository/.project
+++ b/releng/org.eclipse.passage.fls.repository/.project
@@ -8,4 +8,11 @@
 	</buildSpec>
 	<natures>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>.settings</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/.settings</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
