--- a/releng/org.eclipse.passage.target/.project
+++ b/releng/org.eclipse.passage.target/.project
@@ -5,13 +5,14 @@
 	<projects>
 	</projects>
 	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
-		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>.settings</name>
+			<type>2</type>
+			<locationURI>$%7BPARENT-2-PROJECT_LOC%7D/.settings</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
