--- a/.settings/org.eclipse.pde.prefs
+++ b/.settings/org.eclipse.pde.prefs
@@ -12,11 +12,12 @@ compilers.p.build.source.library=1
 compilers.p.build.src.includes=1
 compilers.p.deprecated=1
 compilers.p.discouraged-class=1
+compilers.p.exec-env-too-low=1
 compilers.p.internal=1
 compilers.p.missing-packages=2
 compilers.p.missing-version-export-package=2
-compilers.p.missing-version-import-package=2
-compilers.p.missing-version-require-bundle=1
+compilers.p.missing-version-import-package=0
+compilers.p.missing-version-require-bundle=0
 compilers.p.no-required-att=0
 compilers.p.no.automatic.module=1
 compilers.p.not-externalized-att=0
