[TP] Update to Eclipse Passage 4.3.0 and Eclipse SimRel 2025-09
Remove unused log4j2 configuration file from o.e.passage.lbc.jetty.

--- a/bundles/org.eclipse.passage.lbc.jetty/build.properties
+++ b/bundles/org.eclipse.passage.lbc.jetty/build.properties
@@ -17,5 +17,4 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               about.html,\
-               config/
+               about.html
